--- a/myapplication/src/main/res/layout/fragment_tasktimer.xml
+++ b/myapplication/src/main/res/layout/fragment_tasktimer.xml
@@ -13,18 +13,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="00:00"
-            android:textSize="24dp"
-            />
-    <!--     <ListView
+
+         <ListView
             android:id="@+id/tasklistview"
             android:layout_width="match_parent"
             android:layout_height="300dp"/>
--->
-    </LinearLayout>
 
+
+    <Chronometer
+        android:id="@+id/chronometer"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        />
+    <Button
+        android:id="@+id/resetBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RESET"/>
+    </LinearLayout>
 </RelativeLayout>
